Remove use of deprecated Boolean constructor